# scriptorium

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: TEMPLATE.example.toml  lat_test.toml  sample_demo.toml  sample_demo_ci.toml  sample_demo_ci_strict.toml
docs/: DECISIONS.md  HANDOFF.md  PROJECT_CONTEXT.md  PROVENANCE_RULES.md  PROVENANCE_TEMPLATE.json  QUICKSTART.md  README_PORTFOLIO.md  REENTRY_SMOKE.md  RELEASE_CHECKLIST.md  RIGHTS_LEDGER.md  SCHEMA_CANON_JSONL.md  corpora.json  corpora.public.json  sources_catalog.json
sample_data/: queries.txt
src/: bootstrap_provenance_from_canon.py  build_bm25_bede_prod.py  build_bm25_utf8.py  build_sqlite_db.py  build_vec_bede_faiss.py  build_vec_index_global.py  canon_lint.py  canon_migrate_v2.py  demo_full_pipeline.ps1  query_bede_hybrid_faiss.py  release_snapshot.ps1  release_window.ps1  render_reader_0597_0731.py  render_reader_fallback.py  retrieve_bede_hybrid_faiss.py  retrieve_hybrid.py  rights_lint.py  smoke_demo.py  smoke_test.ps1  update_corpora_registry.py  update_provenance_hashes.py  validate_corpora_registry.py  validate_reader_bundle.py
tests/: test_harvest_safety.py  test_provenance_autogen_strict_rights.py  test_provenance_gate.py  test_provenance_sha256.py
tools/: archive_auto.py  archive_harvest.py  build_db_from_registry.py  build_demo_db_from_private.py  gen_manifest.py  import_perseus_tei_simple.py  ingest_auto.py  ingest_manifest.py  ingest_perseus_all.py  ingest_pleiades_places.py  make_rome_core_registry.py  platner_ashby_scraper.py  (+3 more)
(+58 files in other folders)
